feat: VITs sem validação em CPU feito

--- a/preprocessamento.ipynb
+++ b/preprocessamento.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gerar divisão treino e teste"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -83,6 +90,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gerar pasta de validação"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -123,6 +137,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Deletar arquivos do path"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -142,6 +163,42 @@
     "num_files_to_delete = 2000\n",
     "\n",
     "delete_files(directory, num_files_to_delete)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Redimensionar dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import os\n",
+    "\n",
+    "def redimensionar_imagens(path, novo_tamanho):\n",
+    "    for filename in os.listdir(path):\n",
+    "      \n",
+    "       \n",
+    "        if filename.endswith(\".jpg\") or filename.endswith(\".png\"):\n",
+    "            image_path = os.path.join(path, filename)\n",
+    "            try:\n",
+    "                image = Image.open(image_path)\n",
+    "                image_rgb = image.convert(\"RGB\")\n",
+    "                resized_image = image_rgb.resize(novo_tamanho)\n",
+    "                resized_image.save(os.path.join(path, filename))\n",
+    "            except OSError as e:\n",
+    "                os.remove(image_path)\n",
+    "                print(f\"Arquivo {filename} excluído.\")\n",
+    "\n",
+    "path = '../VIT-dog-cat/data/dataset_treino_e_teste/test/Dog/'\n",
+    "novo_tamanho = (32, 32) \n",
+    "redimensionar_imagens(path, novo_tamanho)"
    ]
   }
  ],
