--- a/VIT_pytorch.ipynb
+++ b/VIT_pytorch.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,8 @@
     "import torchvision.transforms as T\n",
     "from torch.optim import Adam\n",
     "import torchvision.models as models\n",
-    "import numpy as np\n",
     "\n",
-    "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
     "from torchvision.datasets import ImageFolder\n",
     "from torch.utils.data import DataLoader"
@@ -316,6 +313,71 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Validate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torchvision.transforms as transforms\n",
+    "from PIL import Image\n",
+    "import torch.nn as nn\n",
+    "import torchvision.models as models\n",
+    "from torchvision.models.vision_transformer import ViT_L_32_Weights\n",
+    "\n",
+    "# Carregar o modelo treinado\n",
+    "model = models.vit_l_32(weights=ViT_L_32_Weights.IMAGENET1K_V1)\n",
+    "in_features = model.heads[-1].in_features\n",
+    "model.heads[-1] = nn.Linear(in_features, 1)\n",
+    "model.sigmoid = nn.Sigmoid()\n",
+    "\n",
+    "model.load_state_dict(torch.load('../VIT-dog-cat/models/modelo_vit_gpu.pth', map_location=torch.device('cpu')))\n",
+    "model.eval()  \n",
+    "\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize(224),  \n",
+    "    transforms.CenterCrop(224),\n",
+    "    transforms.ToTensor(),  \n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]), \n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classe prevista: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = '../VIT-dog-cat/data/dataset_treino_e_teste/validation/Dog/1000.jpg'  \n",
+    "image = Image.open(image_path)\n",
+    "image = transform(image)\n",
+    "image = image.unsqueeze(0)  \n",
+    "\n",
+    "import torch.nn.functional as F\n",
+    "with torch.no_grad():\n",
+    "    output = model(image)\n",
+    "    probabilities = F.softmax(output, dim=1)\n",
+    "    _, predicted_class = torch.max(probabilities, 1)\n",
+    "\n",
+    "print(\"Classe prevista:\", predicted_class.item())"
    ]
   }
  ],
