Gerano Verificador para classificador do Pytorch

--- a/VIT_pytorch.ipynb
+++ b/VIT_pytorch.ipynb
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,16 +333,15 @@
     "from PIL import Image\n",
     "import torch.nn as nn\n",
     "import torchvision.models as models\n",
-    "from torchvision.models.vision_transformer import ViT_L_32_Weights\n",
+    "from transformers import ViTForImageClassification\n",
     "\n",
-    "# Carregar o modelo treinado\n",
-    "model = models.vit_l_32(weights=ViT_L_32_Weights.IMAGENET1K_V1)\n",
-    "in_features = model.heads[-1].in_features\n",
-    "model.heads[-1] = nn.Linear(in_features, 1)\n",
-    "model.sigmoid = nn.Sigmoid()\n",
+    "state_dict = torch.load('../VIT-dog-cat/models/modelo_vit_gpu.pth', map_location=torch.device('cpu'))\n",
+    "model_state_dict = model.state_dict()\n",
     "\n",
-    "model.load_state_dict(torch.load('../VIT-dog-cat/models/modelo_vit_gpu.pth', map_location=torch.device('cpu')))\n",
-    "model.eval()  \n",
+    "state_dict = {k: v for k, v in state_dict.items() if k in model_state_dict}\n",
+    "\n",
+    "model.load_state_dict(state_dict, strict=False)\n",
+    "\n",
     "\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize(224),  \n",
@@ -354,14 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Classe prevista: 0\n"
+      "Classe prevista: tensor([[0.5801]])\n"
      ]
     }
    ],
@@ -374,10 +373,9 @@
     "import torch.nn.functional as F\n",
     "with torch.no_grad():\n",
     "    output = model(image)\n",
-    "    probabilities = F.softmax(output, dim=1)\n",
-    "    _, predicted_class = torch.max(probabilities, 1)\n",
+    "    probabilities = F.sigmoid(output.logits)\n",
     "\n",
-    "print(\"Classe prevista:\", predicted_class.item())"
+    "print(\"Classe prevista:\",probabilities)"
    ]
   }
  ],
