testando modelo com dataset pokemon binario codigo loop pronto

--- a/preprocessamento.ipynb
+++ b/preprocessamento.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,11 +42,11 @@
     "cwd = os.getcwd()\n",
     "\n",
     "\n",
-    "diretorio = cwd + \"./data/dataset_origial/\"\n",
+    "diretorio = cwd + \"./data/pokemon/dataset_original/\"\n",
     "pastas = obter_nomes_pastas(diretorio)\n",
     "\n",
     "diretorio_origem = diretorio\n",
-    "diretorio_destino = cwd + './data/dataset_treino_e_teste/'\n",
+    "diretorio_destino = cwd + './data/pokemon/dataset_treino_e_teste/'\n",
     "\n",
     "percent = 0.8\n",
     "\n",
@@ -98,23 +98,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Arquivo '0.jpg' copiado com sucesso.\n",
-      "Arquivo '1.jpg' copiado com sucesso.\n",
       "Arquivo '10.jpg' copiado com sucesso.\n",
-      "Arquivo '100.jpg' copiado com sucesso.\n",
-      "Arquivo '1000.jpg' copiado com sucesso.\n",
-      "Arquivo '1.jpg' copiado com sucesso.\n",
-      "Arquivo '10.jpg' copiado com sucesso.\n",
-      "Arquivo '100.jpg' copiado com sucesso.\n",
-      "Arquivo '1000.jpg' copiado com sucesso.\n",
-      "Arquivo '10000.jpg' copiado com sucesso.\n"
+      "Arquivo '11.jpg' copiado com sucesso.\n",
+      "Arquivo '11.png' copiado com sucesso.\n",
+      "Arquivo '12.jpg' copiado com sucesso.\n",
+      "Arquivo '12.png' copiado com sucesso.\n",
+      "Arquivo '01.jpg' copiado com sucesso.\n",
+      "Arquivo '10.png' copiado com sucesso.\n",
+      "Arquivo '11.jpg' copiado com sucesso.\n",
+      "Arquivo '11.png' copiado com sucesso.\n",
+      "Arquivo '12.jpg' copiado com sucesso.\n"
      ]
     }
    ],
@@ -132,8 +132,8 @@
     "        print(f\"Arquivo '{arquivo}' copiado com sucesso.\")\n",
     "        \n",
     "        \n",
-    "copiar_arquivos(\"./data/dataset_treino_e_teste/train/Cat\", \"./data/dataset_treino_e_teste/validation/Cat/\", 5)\n",
-    "copiar_arquivos(\"./data/dataset_treino_e_teste/train/Dog\", \"./data/dataset_treino_e_teste/validation/Dog\", 5)"
+    "copiar_arquivos(\"./data/pokemon/dataset_treino_e_teste/train/0001_Bulbasaur\", \"./data/pokemon/dataset_treino_e_teste/validation/0001_Bulbasaur/\", 5)\n",
+    "copiar_arquivos(\"./data/pokemon/dataset_treino_e_teste/train/0004_Charmander\", \"./data/pokemon/dataset_treino_e_teste/validation/0004_Charmander\", 5)"
    ]
   },
   {
